syntax = "proto3";

package user;

// 指定生成代码的 Go 包名
option go_package = "internal/rpc/user";

// 用户注册请求
message UserRegisterRequest {
  string username = 1;
  string password = 2;
  string nickname = 3;
}

// 用户注册响应
message UserRegisterResponse {
  bool success = 1;
  string error_msg = 2;
}

// 用户登录请求
message UserLoginRequest {
  string username = 1;
  string password = 2;
}

// 用户登录响应
message UserLoginResponse {
  string token = 1;
  string error_msg = 2;
}

// 用户服务
service UserService {
  rpc Register (UserRegisterRequest) returns (UserRegisterResponse);
  rpc Login (UserLoginRequest) returns (UserLoginResponse);
}